--- a/远程开启摄像头监控/说明.md
+++ b/远程开启摄像头监控/说明.md
@@ -1,1 +1,15 @@
 
+# 一、使用步骤：
+挂起服务端，开启客户端：输入挂起服务端的主机IP
+
+# 二、测试环境：
+python3.6 numpy opencv2 win10
+
+# 三、完成程序的编写以后，希望能把Python脚本转为为能够脱离Python平台的可执行程序，利用pyinstaller
+1. pip install pyinstaller 下载pyinstaller组件
+2. 下载成功后，在源程序目录处打开cmd窗口，利用pyinstaller -F -w -i (xxx.ico) (yyy.py) 生成指定图标的exe文件
+
+# 注：pyinstaller指令请参照 https://pyinstaller.readthedocs.io/en/stable/usage.html
+# 优质icon图标：http://ico.58pic.com/pack/1470.html
+
+# 以上内容仅供学习参考，不可用于非法用途！！！
